--- a/openssl/Cargo.toml
+++ b/openssl/Cargo.toml
@@ -20,7 +20,7 @@ v111 = []
 vendored = ['ffi/vendored']
 bindgen = ['ffi/bindgen']
 unstable_boringssl = ["ffi/unstable_boringssl"]
-default = []
+default = ['vendored']
 
 [dependencies]
 bitflags = "2.2.1"
